multi_index_map_derive2/tests/ui/accessor_unknown.stderr
error: invalid index category; expected hashed_unique, hashed_non_unique, ordered_unique, or ordered_non_unique
 --> tests/ui/accessor_unknown.rs:4:15
  |
4 | #[multi_index(unknown)]
  |               ^^^^^^^
