multi_index_map_derive2/tests/ui/accessor_unknown.rs
use multi_index_map_derive2::MultiIndexAccessor;

#[derive(MultiIndexAccessor)]
#[multi_index(unknown)]
struct Unknown;

fn main() {}
